[tool.poetry]
name = "gamepayapi"
version = "0.1.0"
description = ""
authors = ["w1tnessbtwwwww <work.w1tnessbtw@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
yarl = "^1.18.3"
python-multipart = "^0.0.20"
alembic = "^1.14.1"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
